# Quartz-Launcher

./: .env.example  .gitignore  Cargo.toml  README.md  package.json
.github/workflows/: ci.yml
apps/quartz-launcher/: .taurignore  Cargo.toml  package-lock.json  package.json  tauri.conf.json
apps/quartz-launcher/capabilities/: default.json
apps/quartz-launcher/config/crash_assistant/: config.toml
apps/quartz-launcher/src/: commands.rs  discord.rs  game_sessions.rs  main.rs  state.rs  system_memory.rs
apps/quartz-ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/quartz-ui/src/: App.svelte
apps/quartz-ui/src/components/: LoginView.svelte  OnboardingWizard.svelte
apps/quartz-ui/src/components/launcher/: BottomBar.svelte  BrowseView.svelte  InstanceHeroIcon.svelte  LauncherHome.svelte  LauncherSettings.svelte  LauncherShell.svelte  MacTrafficLights.svelte  ProfileAccountControl.svelte  SegmentedControl.svelte
apps/quartz-ui/src/components/shell/: GlassGroup.svelte  GlassRow.svelte  PanelHeader.svelte  UserAvatar.svelte
apps/quartz-ui/src/lib/: api.ts  assets.ts  minecraftAvatar.ts
apps/quartz-ui/src/lib/icons/: ChevronDown.svelte  Gear.svelte  Play.svelte  Plus.svelte  index.ts
apps/quartz-ui/src/lib/stores/: launcher.ts  settings.ts  view.ts
apps/quartz-ui/src/lib/transitions/: panel.ts
apps/quartz-ui/src/styles/: global.css  liquid-glass.css  tokens.css
assets/icons/: README.md
crates/quartz-auth/: Cargo.toml
crates/quartz-auth/src/: account.rs  credentials.rs  lib.rs  msa.rs  offline.rs  xbox.rs
crates/quartz-catalog/: Cargo.toml
crates/quartz-catalog/src/: lib.rs  tree.rs
crates/quartz-download/: Cargo.toml
crates/quartz-download/src/: lib.rs  parallel.rs
crates/quartz-instance/: Cargo.toml
crates/quartz-instance/src/: instance.rs  lib.rs  store.rs
crates/quartz-java/: Cargo.toml
crates/quartz-java/src/: lib.rs
crates/quartz-launch/: Cargo.toml
crates/quartz-launch/src/: args.rs  lib.rs
crates/quartz-meta/: Cargo.toml
crates/quartz-meta/src/: fabric.rs  install.rs  launch_profile.rs  lib.rs  loaders.rs  manifest.rs  version.rs
crates/quartz-modplatforms/: Cargo.toml
crates/quartz-modplatforms/src/: curseforge.rs  lib.rs  modrinth.rs  mrpack.rs
scripts/: free-port.mjs
