[workspace]
members = [
    "crates/quartz-auth",
    "crates/quartz-meta",
    "crates/quartz-modplatforms",
    "crates/quartz-catalog",
    "crates/quartz-instance",
    "crates/quartz-download",
    "crates/quartz-launch",
    "crates/quartz-java",
    "apps/quartz-launcher",
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
uuid = { version = "1", features = ["v3", "v4"] }
md-5 = "0.10"
sha1 = "0.10"
keyring = "3"
thiserror = "2"
anyhow = "1"
dirs = "6"
urlencoding = "2"
zip = "2"
discord-rich-presence = "0.2"
parking_lot = "0.12"
open = "5"
once_cell = "1"
dotenvy = "0.15"
single-instance = "0.3"
tauri = { version = "2", features = [] }
tauri-build = { version = "2", features = [] }
tauri-plugin-shell = "2"
window-vibrancy = "0.5"
