[package]
name = "quartz-java"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
sha1 = { workspace = true }
quartz-meta = { path = "../quartz-meta" }
quartz-download = { path = "../quartz-download" }
