[package]
name = "quartz-meta"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
quartz-download = { path = "../quartz-download" }
zip = { workspace = true }
